--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "capabilitymesh"
-version = "1.0.0-alpha.1"
-description = "The capability mesh for multi-agent systems - universal discovery and negotiation layer"
+version = "1.0.0-alpha.2"
+description = "Universal capability discovery and negotiation for multi-agent systems - works across all frameworks"
 readme = "README_PYPI.md"
 requires-python = ">=3.9"
-license = {text = "MIT"}
+license = {text = "Apache-2.0"}
 authors = [
     {name = "Sai Kumar Yava", email = "saikumar.geek@github.com"}
 ]
@@ -20,7 +20,7 @@ keywords = [
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
